--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.theironyard.finalproject">
+          package="com.theironyard.finalproject">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -17,20 +17,30 @@
             android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CreateChildActivity" />
-        <activity android:name=".CreateParentActivity" />
+        <activity android:name=".CreateChildActivity"/>
+        <activity android:name=".CreateParentActivity"/>
         <activity
             android:name=".ParentProfileActivity"
             android:label="@string/title_activity_parent_profile"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".CreateChoreActivity" />
-        <activity android:name=".ChildProfileActivity" />
-        <activity android:name=".CreateRewardActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".CreateChoreActivity"/>
+        <activity android:name=".ChildProfileActivity"/>
+        <activity android:name=".CreateRewardActivity"/>
+        <activity android:name=".ParentViewWishlistActivity">
+        </activity>
+        <activity android:name=".ParentViewChoresActivity">
+        </activity>
+        <activity android:name=".UpdateProfileActivity">
+        </activity>
+        <activity android:name=".CreateWishlistItemActivity">
+        </activity>
+        <activity android:name=".EditRewardActivity">
+        </activity>
     </application>
 
 </manifest>
