--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
         </activity>
         <activity android:name=".EditRewardActivity">
         </activity>
+        <activity android:name=".HomeActivity">
+        </activity>
+        <activity android:name=".CalendarActivity">
+        </activity>
+        <activity android:name=".TestActivity">
+        </activity>
     </application>
 
 </manifest>
