--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Final Project"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.CreateChildActivity"/>
-        <activity android:name=".activities.CreateParentActivity"/>
         <activity
             android:name=".activities.ParentProfileActivity"
             android:label="@string/title_activity_parent_profile"
@@ -24,9 +23,10 @@
         <activity android:name=".activities.CreateChoreActivity"/>
         <activity
             android:name=".activities.ChildProfileActivity"
-            android:label="ChildProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activities.CreateRewardActivity"/>
+            android:label="ChildProfileActivity"/>
+        <activity
+            android:name=".activities.CreateRewardActivity"
+            android:label="CreateRewardActivity"/>
         <activity android:name=".activities.ParentViewWishlistActivity">
         </activity>
         <activity android:name=".activities.ParentViewChoresActivity">
@@ -43,8 +43,7 @@
         </activity>
         <activity android:name=".TestActivity">
         </activity>
-        <activity android:name=".activities.ChildViewChoresActivity">
-        </activity>
+        <activity android:name=".activities.ChildViewChoresActivity"/>
         <activity android:name=".activities.ChildViewWishlistActivity">
         </activity>
         <activity android:name=".activities.RegistrationActivity">
@@ -52,11 +51,17 @@
         <activity android:name=".activities.ParentLoginActivity">
         </activity>
         <activity android:name=".activities.ChildLoginActivity">
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        </activity>
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
+
+        <activity android:name=".activities.ChildViewRewardsActivity">
+        </activity>
     </application>
 
 </manifest>
