--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Final Project"
+        android:label="Chalkboard Chores"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.CreateChildActivity"/>
